feat: add autosuggest to '/search' endpoint;updates buildsearchquery and openapi.yaml
